# TSQUARE

./: AUTHORS  DISCLAIMER.md  Doxyfile.in  INSTALL  Makefile.am  README  README.md  configure  configure.ac
common/: Box.cc  Box.h  Ellipsoid.cc  Ellipsoid.h  Exceptions.h  ExtendedVector.cc  ExtendedVector.h  Makefile.am  Particle.cc  Particle.h  Sphere.cc  Sphere.h  Star.cc  Star.h  global.h  imagemanipulation.cc  imagemanipulation.h
docs/: Doxyfile.in  Makefile.am  citations.bib
examples/images/: letter-y.txt  rock.txt
m4/: ax_boost_base.m4  ax_lib_cgal_core.m4
src/: Makefile.am  inrimage.inr  tsquare.cc  tsquare.h
