noinst_LIBRARIES = libtsquare.a

libtsquare_a_SOURCES = \
					   global.h \
					   Exceptions.h \
					   ExtendedVector.h \
					   Sphere.h \
					   Particle.h \
					   Star.h \
					   Box.h \
					   Ellipsoid.h \
					   imagemanipulation.h \
					   ExtendedVector.cc \
					   Sphere.cc \
					   Particle.cc \
					   Star.cc \
					   Box.cc \
					   Ellipsoid.cc \
					   imagemanipulation.cc

libtsquare_a_CPPFLAGS = -I. -I/usr/include -I/usr/local/include -I/opt/local/include
